Fri Dec  1 13:05:28 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java: New outerVertex member,
	which will replace Vertex.outer.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java: nextOriginLoop() and
	nextApexLoop() can check OUTER attributes

Thu Nov 30 17:03:16 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/PAVLSortedTree.java: Nex isEmpty()
	method. Replace first(), last(), next() and prev() by iterator()
	and backwardIterator();

Tue Nov 28 13:27:28 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Triangle.java: In Triangle(Vertex [] v)
	constructor, do not call Vertex.setLink(), let the caller handle
	Vertex links.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java: New split() method.
	* src/org/jcae/mesh/amibe/algos3d/AbstractAlgoHalfEdge.java:
	New class, to provide a skeleton for HalfEdge based algorithms.
	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java
	  src/org/jcae/mesh/amibe/algos3d/SplitEdge.java: Rewritten to
	extend AbstractAlgoHalfEdge.
	* src/org/jcae/mesh/amibe/util/PAVLSortedTree2.java
	  src/org/jcae/mesh/amibe/util/PAVLNode.java
	  src/org/jcae/mesh/amibe/util/PAVLNodeOTriangle.java: These classes
	are removed.  When algorithms use edge-based quality criterion, it is
	much more efficient to call Mesh.buildEdges() and use
	AbstractAlgoHalfEdge.

Mon Nov 27 15:58:46 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Pass
	arguments through a Map.

Sun Nov 26 00:02:52 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildAdjacency): Fix adjacency
	relations when reading non manifold meshes.
	* src/org/jcae/mesh/amibe/ds/Vertex.java (getNeighboursNodes): Make
	this method more efficient; its return value has been changed to
	a Collection.

Fri Nov 24 19:38:29 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
